banner section add

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
                 </ul>
             </div>
         </nav>
+    </header>
 
-        <!-- Header Banner -->
+    <!-- Header Banner -->
 
+    <section>
         <div class="banner-container">
             <div class="banner-content">
                 <h1 class="primary-title">
                     Start your Journey as Influencer
                 </h1>
                 <p class="primary-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <button>
+                <button class="btn-primary">
                     Preebook now <i class="fa-solid fa-arrow-right"></i>
                 </button>
             </div>
@@ -42,6 +44,6 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
-    </header>
+    </section>
 </body>
 </html>
