Brand section added

--- a/index.html
+++ b/index.html
@@ -45,5 +45,16 @@
             </div>
         </div>
     </section>
+
+    <!-- Brand Section -->
+
+    <section class="brand-container">
+        <img src="logos/Alibaba.svg" alt="">
+        <img src="logos/Amazon.svg" alt="">
+        <img src="logos/Daraz.pk Logo.svg" alt="">
+        <img src="logos/Ebay.svg" alt="">
+        <img src="logos/Rakuten.svg" alt="">
+        <img src="logos/Alibaba.svg" alt="">
+    </section>
 </body>
 </html>
