--- a/index.html
+++ b/index.html
@@ -184,6 +184,39 @@
             </h2>
         </a>
     </section>
+
+    <!-- Blog Section -->
+
+    <section class="blog-container">
+        <div class="blog-image">
+            <img src="images/gear.png" alt="">
+        </div>
+        <div class="blog-content">
+            <h2 class="primary-title">
+                Featured products at one place
+            </h2>
+            <p class="primary-descripton">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            <button class="btn-primary">
+                Join Now <i class="fa-solid fa-arrow-right"></i>
+            </button>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    
+    <footer>
+        <h2 class="primary-title">Influencer products</h2>
+        <p class="primary-description">
+            Copyright &copy; 2023  influencer products <br>
+            All rights reserved
+        </p>
+        <span><i class="fa-brands fa-instagram"></i></span>
+        <span><i class="fa-brands fa-dribbble"></i></span>
+        <span><i class="fa-brands fa-twitter"></i></span>
+        <span><i class="fa-brands fa-youtube"></i></span>
+    </footer>
     
 </body>
 </html>
