--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             </div>
             <div class="menus">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="">Log in</a></li>
-                    <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                    <li><a href=""><i class="fa-solid fa-cart-plus"></i></a></li>
+                    <li><a href="#">Account</a></li>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-cart-plus"></i></a></li>
                 </ul>
             </div>
         </nav>
@@ -40,7 +39,7 @@
                     Preebook now <i class="fa-solid fa-arrow-right"></i>
                 </button>
             </div>
-            <div class="bannger-image">
+            <div class="banner-image">
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>        
@@ -60,7 +59,7 @@
     <!-- Product Section -->
 
     <section class="mail-product-container">
-        <div class="produtc-container">
+        <div class="product-container">
             <div class="product">
                 <img src="images/tripod.png" alt="">
                 <h3 class="product-title">Flex Tripod</h3>
@@ -212,10 +211,10 @@
             Copyright &copy; 2023  influencer products <br>
             All rights reserved
         </p>
-        <span><i class="fa-brands fa-instagram"></i></span>
-        <span><i class="fa-brands fa-dribbble"></i></span>
-        <span><i class="fa-brands fa-twitter"></i></span>
-        <span><i class="fa-brands fa-youtube"></i></span>
+        <span><a href="#"><i class="fa-brands fa-instagram"></i></a></span>
+        <span><a href="#"><i class="fa-brands fa-dribbble"></i></a></i></span>
+        <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
+        <span><a href="#"><i class="fa-brands fa-youtube"></i></a></span>
     </footer>
     
 </body>
